WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65985
[GTK] wrong annotation for the return value of webkit_web_view_get_hit_test_results()
https://bugs.webkit.org/show_bug.cgi?id=65985
Summary
[GTK] wrong annotation for the return value of webkit_web_view_get_hit_test_r...
Gustavo Noronha (kov)
Reported
2011-08-10 07:44:46 PDT
The annotation says 'transfer none', but it's a newly created object that needs to be freed.
Attachments
Patch
(1.56 KB, patch)
2011-08-10 07:57 PDT
,
Gustavo Noronha (kov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2011-08-10 07:57:01 PDT
Created
attachment 103492
[details]
Patch
Xan Lopez
Comment 2
2011-08-10 08:29:52 PDT
Comment on
attachment 103492
[details]
Patch r=me
WebKit Review Bot
Comment 3
2011-08-10 08:44:01 PDT
Comment on
attachment 103492
[details]
Patch Clearing flags on attachment: 103492 Committed
r92771
: <
http://trac.webkit.org/changeset/92771
>
WebKit Review Bot
Comment 4
2011-08-10 08:44:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug