[GTK] wrong annotation for the return value of webkit_web_view_get_hit_test_results() https://bugs.webkit.org/show_bug.cgi?id=65985

Patch by Gustavo Noronha Silva <gns@gnome.org> on 2011-08-10
Reviewed by Xan Lopez.

* webkit/webkitwebview.cpp:

Canonical link: https://commits.webkit.org/81845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92771 268f45cc-cd09-0410-ab3c-d52691b4dbfc